--- a/client/main.css
+++ b/client/main.css
@@ -95,7 +95,7 @@ right: 0;
 }
 
 .todo-list__item__text {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(249, 245, 4);
   flex-grow: 1;
   text-align: left;
   font-size: 1rem;
@@ -105,7 +105,7 @@ right: 0;
 .checkbox {
   height: 22px;
   width: 22px;
-  border: 1px solid black;
+  border: 1px solid rgb(248, 248, 4);
   cursor: pointer;
 }
 
@@ -118,9 +118,9 @@ right: 0;
 .checkbox.checked::before {
   display: inline-block;
   content: '';
-  height: 15px;
+  height: 19px;
   width: 6px;
-  border: 2px solid black;
+  border: 2px solid rgba(255, 255, 0, 0.842);
   border-top: none;
   border-left: none;
   transform: rotate(45deg);
