--- a/client/main.css
+++ b/client/main.css
@@ -42,6 +42,7 @@ right: 0;
 
 .todo-list-container {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Calibri, 'Trebuchet MS', sans-serif;
+  color: green;
   background-color: rgb(255, 118, 218);
   min-height: 80vh;
   width: 600px;
@@ -49,7 +50,7 @@ right: 0;
   padding: 30px;
   text-align: center;
   box-shadow: 0 8px 2px 6px 0009;
-  
+  border-radius: 89px;
 }
 
 .add-todo-form {
